fix footer socials alignment

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -77,3 +77,7 @@
     height: 0.75rem;
     width: 100%;
 }
+
+.footer-socials {
+    margin-left: -10px;
+}
